<?xml version="1.0"?>
<package format="2">
  <name>alterego_msgs</name>
  <version>0.10.1</version>
  <description>alterego_msgs provides messages specific to Alterego research robots</description>
  <maintainer email="giovanni.rosato@iit.it">GiovanniRosato</maintainer>
  <license>Apache 2.0</license>

  <url type="website">https://www.naturalmachinemotioninitiative.com/ego</url>
  <url type="repository">https://github.com/IIT-SoftBots/alterego_msgs.git</url>
  <author>IIT SoftBots</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <export>
    <architecture_independent/>
  </export>
</package>