<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alterego_msgs</name>
  <version>0.0.0</version>
  <description>alterego_msgs provides messages specific to Alterego research robots</description>

  <url type="website">https://www.naturalmachinemotioninitiative.com/ego</url>
  <url type="repository">https://github.com/IIT-SoftBots/alterego_msgs.git</url>

  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>
  
  <maintainer email="mattia.poggiani@iit.it">Mattia Poggiani</maintainer>
  
  <license>BSD 3-Clause</license>

  <!-- Dipendenze di build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dipendenze necessarie per la generazione -->
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Dipendenze necessarie all'esecuzione -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dipendenze per esportazione -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
